--- a/utils/sugar1/src/scss/core/_variables.scss
+++ b/utils/sugar1/src/scss/core/_variables.scss
@@ -18,7 +18,7 @@ $font-size: null !default;
 
 /**
  * Stpre aéé the classes in their namespaces
- * @type      (Map)
+ * @type      (List)
  */
 $classes: () !default; // store all the classes in their namespaces
 
