--- a/utils/sugar1/src/scss/core/functions/_all.scss
+++ b/utils/sugar1/src/scss/core/functions/_all.scss
@@ -12,31 +12,30 @@
 @forward "font";
 @forward "get-property-name";
 @forward "get-property-type";
-// @forward "hacolor";
-// @forward "interpolate";
-// @forward "color";
+@forward "has-color";
+@forward "interpolate";
+@forward "color";
 @forward "is";
 @forward "lnf";
 @forward "look-and-feel";
 @forward "modular-scale";
 @forward "odd";
 @forward "parse-properties";
-// @forward "percent";
-// @forward "pt";
-// @forward "px";
-// @forward "rem";
-// @forward "render-round-even";
-// @forward "render-round-odd";
-// @forward "s";
-// @forward "render-round";
-// @forward "replace-tokens";
-// @forward "selector";
+@forward "percent";
+@forward "pt";
+@forward "px";
+@forward "rem";
+@forward "render-round-even";
+@forward "render-round-odd";
+@forward "render-round";
+@forward "replace-tokens";
+@forward "selector";
 @forward "setting";
-// @forward "space";
+@forward "space";
 @forward "strip-units";
-// @forward "test-argument";
-// @forward "text-format-class";
-// @forward "transition-map";
-// @forward "transition";
+@forward "test-argument";
+@forward "text-format-class";
+@forward "transition-map";
+@forward "transition";
 @forward "unit-context";
-// @forward "vertical-rhythm-class";
+@forward "vertical-rhythm-class";
