--- a/utils/sugar1/src/scss/core/functions/_setting.scss
+++ b/utils/sugar1/src/scss/core/functions/_setting.scss
@@ -15,7 +15,7 @@
  * @return 				{Mixed} 										The setting value¨
  *
  * @example
- * $font-size : s-setting('typography.font-size');
+ * $font-size : sugar.setting('typography.font-size');
  * // etc...
  *
  * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
