--- a/utils/sugar1/src/scss/core/_all.scss
+++ b/utils/sugar1/src/scss/core/_all.scss
@@ -3,5 +3,5 @@
 //
 @forward 'variables';
 @forward 'functions/all';
-// @forward 'mixins/all';
+@forward 'mixins/all';
 // @forward 'helper-classes';
