--- a/utils/sugar1/src/scss/core/functions/_interpolate.scss
+++ b/utils/sugar1/src/scss/core/functions/_interpolate.scss
@@ -37,7 +37,7 @@
   }
 
   // get the value
-  $value: s("#{$stack}.#{$size}");
+  $value: setting("#{$stack}.#{$size}");
 
   // if we have a value with units, return
   @if $value and not math.is-unitless($value) {
@@ -46,7 +46,7 @@
 
   // get what we need to interpolate the value
   $ratio: setting("sizes.#{$size}");
-  $default-size: s("#{$stack}.default");
+  $default-size: setting("#{$stack}.default");
 
   // if the getted value is a unitless one, mean that it's the ratio to use
   // to interpolate the default stack value
