--- a/utils/sugar1/src/scss/core/functions/_percent.scss
+++ b/utils/sugar1/src/scss/core/functions/_percent.scss
@@ -1,11 +1,15 @@
+@use 'convert' as *;
 /**
  * Convert the passed value to %
  *
  * @param 			{Number} 		$value 		The value to convert
  * @return 			{Number} 					The % converted value
  *
+ * @example
+ * sugar.percent(10px);
+ *
  * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
-@function s-percent($value) {
-  @return s-convert($value, "%");
+@function percent($value) {
+  @return convert($value, "%");
 }
