--- a/utils/sugar1/src/scss/core/functions/_pt.scss
+++ b/utils/sugar1/src/scss/core/functions/_pt.scss
@@ -1,11 +1,15 @@
+@use 'convert' as *;
 /**
  * Convert the passed value to pt
  *
  * @param 			{Number} 		$value 		The value to convert
  * @return 			{Number} 					The pt converted value
  *
+ * @example
+ * sugar.pt(10px);
+ *
  * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
-@function s-pt($value) {
-  @return s-convert($value, pt);
+@function pt($value) {
+  @return convert($value, pt);
 }
