--- a/utils/sugar1/src/scss/core/functions/_render-round-even.scss
+++ b/utils/sugar1/src/scss/core/functions/_render-round-even.scss
@@ -1,5 +1,11 @@
 @use "sass:math";
 @use "sass:meta";
+@use 'even' as *;
+@use 'px' as *;
+@use 'pt' as *;
+@use 'rem' as *;
+@use 'em' as *;
+@use 'percent' as *;
 /**
  * Return the passed values in the same unit but that has been even rounded on the corresponding px value
  * This ensure that your passed value will be a round px value for final rander in the viewport
@@ -9,14 +15,14 @@
  *
  * @example
  * // if settings.typography.font-size == 16px
- * s-render-round-even(5.2rem);
+ * sugar.render-round-even(5.2rem);
  * // 1. transform to px values : 5.2 * 16px = 83.2px
  * // 2. round even the px value : 84px
  * // 3. transform to passed unit value : 84px / 16px = 5.25rem
  *
  * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
-@function s-render-round-even($value) {
-  $value: meta.call("s-#{math.unit($value)}", s-even(s-px($value)));
+@function render-round-even($value) {
+  $value: meta.call("#{math.unit($value)}", even(px($value)));
   @return $value;
 }
