--- a/utils/sugar1/src/scss/core/functions/_space.scss
+++ b/utils/sugar1/src/scss/core/functions/_space.scss
@@ -1,3 +1,4 @@
+@use 'interpolate' as *;
 /**
  * Return a value interpolated from the settings.spaces stack
  *
@@ -6,11 +7,11 @@
  *
  * @example
  * .my-cool-section {
- * 		padding : s-pace(big);
+ * 		padding : sugar.space(big);
  * }
  *
  * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
-@function s-space($size) {
-  @return s-interpolate("settings.spaces", $size);
+@function space($size) {
+  @return interpolate("spaces", $size);
 }
