--- a/utils/sugar1/src/scss/core/functions/_text-format-class.scss
+++ b/utils/sugar1/src/scss/core/functions/_text-format-class.scss
@@ -1,8 +1,14 @@
+@use 'setting' as *;
 /**
  * Return the text-format setting scope class
+ *
  * @return 		{String} 		The text-format scope class from settings.text-format.scope-class
+ *
+ * @example
+ * sugar.text-format-class(); // tf
+ *
  * @author 		Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
-@function s-text-format-class() {
-  @return s-setting("text-format.scope-class");
+@function text-format-class() {
+  @return setting("text-format.scope-class");
 }
