--- a/utils/sugar1/src/scss/core/functions/_transition-map.scss
+++ b/utils/sugar1/src/scss/core/functions/_transition-map.scss
@@ -1,15 +1,17 @@
 @use "sass:map";
+@use 'parse-properties' as *;
+@use 'setting' as *;
 /**
  * Take a transition as parameter and parse it to return the {Map} corresponding
  * The $transition parameter can be either a registered transition name or a custom css transition like : all .2s ease-in-out 2s
- * The $transition argument will be parsed with the [./_s-parse-properties.scss] function.
+ * The $transition argument will be parsed with the [./_parse-properties.scss] function.
  *
  * @param 			{List} 				$transition 			The registered transition name or the transition string to transform into map
  * @return 			{Map} 										The corresponding transition map properties
  *
  * @example
  * // register a transition
- * \@include s-setup((
+ * \@include sugar.setup((
  * 		transitions : (
  * 			fast : all .2s ease-in-out,
  * 			// other transitions...
@@ -17,7 +19,7 @@
  * ));
  *
  * // registered transition
- * s-transition-map(fast);
+ * sugar.transition-map(fast);
  * // {
  * // 	property : all,
  * // 	duration : .2s,
@@ -25,7 +27,7 @@
  * // }
  *
  * // custom transition
- * s-transition-map(fast -delay .5s);
+ * sugar.transition-map(fast -delay .5s);
  * // {
  * // 	property : all,
  * // 	duration : .2s,
@@ -36,12 +38,12 @@
  * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
 $_s-default-transition-map: null;
-@function s-transition-map($transition) {
+@function transition-map($transition) {
   // merge with default transition
   // to avoid recursion
   @if not $_s-default-transition-map {
-    $_s-default-transition-map: s-parse-properties(
-      s-setting("transitions.default"),
+    $_s-default-transition-map: parse-properties(
+      setting("transitions.default"),
       (
         property: string,
         duration: number,
@@ -52,10 +54,10 @@ $_s-default-transition-map: null;
   }
 
   // parse passed transition
-  $tran: s-parse-properties(
+  $tran: parse-properties(
     $transition,
     (
-      name: map.keys(s-setting("transitions")),
+      name: map.keys(setting("transitions")),
       property: string,
       duration: number,
       ease: string,
@@ -70,13 +72,13 @@ $_s-default-transition-map: null;
   $name: map.get($tran, name);
   @if $name {
     // get the transition
-    $named_transition: s-setting("transitions.#{$name}");
+    $named_transition: setting("transitions.#{$name}");
     // check the name
     @if not $named_transition {
       @error ('The transition named "#{$name}" does not exist...');
     }
     // transform the named transition in map
-    $named_transition: s-transition-map($named_transition);
+    $named_transition: transition-map($named_transition);
     // merge the named transition with the actual transition
     $working_tran: map.merge($_s-default-transition-map, $named_transition);
   }
