--- a/utils/sugar1/src/scss/core/mixins/_all.scss
+++ b/utils/sugar1/src/scss/core/mixins/_all.scss
@@ -1,17 +1,17 @@
-@forward "s-animation";
-@forward "s-classes";
-@forward "s-color-schema";
-@forward "s-component";
-@forward "s-context-setup";
-@forward "s-context";
-@forward "s-filter";
-@forward "s-font-face";
-@forward "s-font";
-@forward "s-init";
-@forward "s-init-classes";
-@forward "s-register-helper-class";
-@forward "s-setup";
-@forward "s-show-vertical-rhythm";
-@forward "s-transition";
-@forward "s-unit-context";
-@forward "s-vertical-rhythm";
+@forward "animation";
+@forward "classes";
+@forward "color-schema";
+@forward "component";
+@forward "context-setup";
+@forward "context";
+@forward "filter";
+// @forward "font-face";
+@forward "font";
+// @forward "init";
+@forward "init-classes";
+@forward "register-helper-class";
+// @forward "setup";
+// @forward "show-vertical-rhythm";
+@forward "transition";
+// @forward "unit-context";
+// @forward "vertical-rhythm";
