--- a/utils/sugar1/src/scss/core/mixins/_all.scss
+++ b/utils/sugar1/src/scss/core/mixins/_all.scss
@@ -1,17 +1,17 @@
-@forward "animation";
-@forward "classes";
-@forward "color-schema";
-@forward "component";
-@forward "context-setup";
-@forward "context";
-@forward "filter";
-// @forward "font-face";
-@forward "font";
-// @forward "init";
-@forward "init-classes";
-@forward "register-helper-class";
-// @forward "setup";
-// @forward "show-vertical-rhythm";
-@forward "transition";
-// @forward "unit-context";
-// @forward "vertical-rhythm";
+@import "animation";
+@import "classes";
+@import "color-schema";
+@import "component";
+@import "context-setup";
+@import "context";
+@import "filter";
+// @import "font-face";
+@import "font";
+// @import "init";
+@import "init-classes";
+@import "register-helper-class";
+@import "setup";
+// @import "show-vertical-rhythm";
+@import "transition";
+// @import "unit-context";
+// @import "vertical-rhythm";
