--- a/utils/sugar1/src/scss/list/_all.scss
+++ b/utils/sugar1/src/scss/list/_all.scss
@@ -1,1 +1,5 @@
-@forward 'list-last-nth';
+@import 'list-implode';
+@import 'list-join';
+@import 'list-last-nth';
+@import 'list-pop';
+@import 'list-remove-nth';
