--- a/utils/sugar1/src/scss/map/_all.scss
+++ b/utils/sugar1/src/scss/map/_all.scss
@@ -1,6 +1,6 @@
-@forward 'map-deep-values';
-@forward 'map-extend';
-@forward 'map-filter-by-namespace';
-@forward 'map-get-or';
-@forward 'map-get-path';
-@forward 'map-set';
+@import 'map-deep-values';
+@import 'map-extend';
+@import 'map-filter-by-namespace';
+@import 'map-get-or';
+@import 'map-get-path';
+@import 'map-set';
