--- a/utils/sugar1/src/scss/string/_all.scss
+++ b/utils/sugar1/src/scss/string/_all.scss
@@ -1,4 +1,4 @@
-@forward 'str-is-url';
-@forward 'str-replace';
-@forward 'str-split';
-@forward 'str-url-ext';
+@import 'str-is-url';
+@import 'str-replace';
+@import 'str-split';
+@import 'str-url-ext';
