--- a/utils/sugar1/tests/scss/_index.scss
+++ b/utils/sugar1/tests/scss/_index.scss
@@ -1,21 +1,4 @@
 @use '../../index' as sugar;
 @use 'sass:meta';
 
-@include sugar.context-setup(my-cool-context, (
- 		look-and-feel : (
- 			padding-vertical : (
- 				default : 500em
- 			)
- 		)
-));
-
-@include sugar.context(my-cool-context) {
- 		@debug(sugar.look-and-feel(padding-vertical)); // => 500em
-}
-
-@include sugar.component('my-component') {
-  @debug(sugar.component('hello'));
-	@include sugar.component('another-component') {
-	   @debug(sugar.component('hello'));
-  }
-}
+@error(sugar.list-implode(('hello', 'world'), '-fewf-'));
