--- a/utils/sugar1/src/scss/_sugar.scss
+++ b/utils/sugar1/src/scss/_sugar.scss
@@ -1,7 +1,7 @@
 // //
 // // Vendors
 // //
-// @forward 'vendors/all';
+// @import 'vendors/all';
 //
 // //
 // // Styleguide
@@ -17,21 +17,21 @@
 //
 // List
 //
-@forward 'list/all';
-
+@import 'list/all';
+//
 // Map
 //
-@forward 'map/all';
-
-// //
-// // Mixins
-// //
-// @use 'mixins/all' as *;
+@import 'map/all';
 //
+// // //
+// // // Mixins
+// // //
+// // @use 'mixins/all' as *;
+// //
 //
 // Strings
 //
-@forward 'string/all';
+@import 'string/all';
 //
 // //
 // // Tools
@@ -41,7 +41,7 @@
 //
 // Core
 //
-@forward 'core/all';
+@import 'core/all';
 
 // //
 // // Effects
