--- a/utils/sugar1/src/scss/core/functions/_all.scss
+++ b/utils/sugar1/src/scss/core/functions/_all.scss
@@ -1,41 +1,41 @@
-@forward "check-property";
-@forward "color-modifier";
-@forward "component";
-@forward "context";
-@forward "convert";
-@forward "dash-to-map";
-@forward "em";
-@forward "even";
-@forward "filter-map";
-@forward "filter";
-@forward "font-family";
-@forward "font";
-@forward "get-property-name";
-@forward "get-property-type";
-@forward "has-color";
-@forward "interpolate";
-@forward "color";
-@forward "is";
-@forward "lnf";
-@forward "look-and-feel";
-@forward "modular-scale";
-@forward "odd";
-@forward "parse-properties";
-@forward "percent";
-@forward "pt";
-@forward "px";
-@forward "rem";
-@forward "render-round-even";
-@forward "render-round-odd";
-@forward "render-round";
-@forward "replace-tokens";
-@forward "selector";
-@forward "setting";
-@forward "space";
-@forward "strip-units";
-@forward "test-argument";
-@forward "text-format-class";
-@forward "transition-map";
-@forward "transition";
-@forward "unit-context";
-@forward "vertical-rhythm-class";
+@import "check-property";
+@import "color-modifier";
+@import "component";
+@import "context";
+@import "convert";
+@import "dash-to-map";
+@import "to-em";
+@import "even";
+@import "filter-map";
+@import "filter";
+@import "font-family";
+@import "font";
+@import "get-property-name";
+@import "get-property-type";
+@import "has-color";
+@import "interpolate";
+@import "color";
+@import "is";
+@import "lnf";
+@import "look-and-feel";
+@import "modular-scale";
+@import "odd";
+@import "parse-properties";
+@import "to-percent";
+@import "to-pt";
+@import "to-px";
+@import "to-rem";
+@import "render-round-even";
+@import "render-round-odd";
+@import "render-round";
+@import "replace-tokens";
+@import "selector";
+@import "setting";
+@import "space";
+@import "strip-units";
+@import "test-argument";
+@import "text-format-class";
+@import "transition-map";
+@import "transition";
+@import "unit-context";
+@import "vertical-rhythm-class";
