--- a/utils/sugar1/src/scss/core/functions/_font.scss
+++ b/utils/sugar1/src/scss/core/functions/_font.scss
@@ -1,13 +1,6 @@
 @use "sass:map";
 @use "sass:math";
 @use "sass:meta";
-@use 'setting' as *;
-@use 'test-argument' as *;
-@use '../../map/map-get-or' as *;
-@use '../../map/map-set' as *;
-@use 'color' as *;
-@use 'rem' as *;
-
 /**
  * Return the font {Map} that correspond to the passed arguments
  *
@@ -186,7 +179,7 @@
   // font-size
   @if $size {
     @if math.is-unitless($size) or math.unit($size) == px {
-      $size: rem($size);
+      $size: to-rem($size);
     }
     $return: map-set($return, font-size, $size);
   }
