--- a/utils/sugar1/src/scss/core/functions/_render-round.scss
+++ b/utils/sugar1/src/scss/core/functions/_render-round.scss
@@ -1,10 +1,5 @@
 @use "sass:math";
 @use "sass:meta";
-@use 'px' as *;
-@use 'pt' as *;
-@use 'rem' as *;
-@use 'em' as *;
-@use 'percent' as *;
 /**
  * Return the passed values in the same unit but that has been rounded on the corresponding px value
  * This ensure that your passed value will be a round px value for final rander in the viewport
@@ -22,6 +17,6 @@
  * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
 @function render-round($value) {
-  $value: meta.call("#{math.unit($value)}", math.round(px($value)));
+  $value: meta.call("#{math.unit($value)}", math.round(to-px($value)));
   @return $value;
 }
