--- a/utils/sugar1/src/scss/map/_map-extend.scss
+++ b/utils/sugar1/src/scss/map/_map-extend.scss
@@ -1,7 +1,7 @@
 @use 'sass:list';
 @use 'sass:string';
 @use 'sass:map';
-
+@use 'sass:meta';
 /**
  * Extend the passed map with the others passed map(s)
  *
