--- a/utils/sugar1/src/scss/string/_str-split.scss
+++ b/utils/sugar1/src/scss/string/_str-split.scss
@@ -1,16 +1,57 @@
 @use 'sass:string';
 @use 'sass:list';
-
 /**
- * Split one string into multiple ones using a delimiter
+ * Split a string using a delimiter
+ *
+ * @param         {String}          $string             The string to split
+ * @param         {String}          [$delimiter=""]     The delimiter to split the string
+ * @return        {List}                                A list a the splited string
+ *
+ * @example
+ * sugar.str-split('hello.world', '.'); // ('hello', 'world')
+ *
+ * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
-@function str-split($string, $separator) {
-  $i: string.index($string, $separator);
-  @if $i != null {
-    @return list.append(
-      string.slice($string, 1, $i - 1),
-      str-split(string.slice($string, $i + string.length($separator)), $separator)
-    );
+@function str-split($string, $delimiter: "") {
+
+  $string: test-argument(
+    'sugar.str-split',
+    'string',
+    string,
+    $string
+  );
+  $delimiter: test-argument(
+    'sugar.str-split',
+    'delimiter',
+    string,
+    $delimiter
+  );
+
+  $result: ();
+  $length: string.length($string);
+
+  @if string.length($delimiter) == 0 {
+    @for $i from 1 through $length {
+      $result: list.append($result, string.slice($string, $i, $i));
+    }
+
+    @return $result;
   }
-  @return $string
+
+  $running: true;
+  $remaining: $string;
+
+  @while $running {
+    $index: string.index($remaining, $delimiter);
+
+    @if $index {
+      $slice: string.slice($remaining, 1, $index - 1);
+      $result: list.append($result, $slice);
+      $remaining: string.slice($remaining, $index + string.length($delimiter));
+    } @else {
+      $running: false;
+    }
+  }
+
+  @return list.append($result, $remaining);
 }
